# theflow

./: .env  Cargo.toml  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/routes/: task_routes.rs
db/: .env  Dockerfile  docker-compose.yml
db/init/: theflow.sql
frontend/: Dockerfile
migrations/2024-03-27-211708_contexts/: up.sql
migrations/2024-03-27-211718_folders/: up.sql
migrations/2024-03-27-211726_projects/: up.sql
migrations/2024-03-27-222130_tasks/: up.sql
src/: cli.rs  crudops.rs  helpers.rs  lib.rs  models.rs  schema.rs
