[package]
name = "theflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = { version = "4.5.4", features = ["derive"] }
